--- a/components/user-registration/pom.xml
+++ b/components/user-registration/pom.xml
@@ -18,12 +18,13 @@
 	<parent>
 		<groupId>com.wso2telco.ids</groupId>
 		<artifactId>component-ids-parent</artifactId>
-		<version>2.0.15-SNAPSHOT</version>
+		<version>2.0.15</version>
 		<relativePath>../../parent/pom.xml</relativePath>
 	</parent>
 
 	<modelVersion>4.0.0</modelVersion>	
-	<artifactId>user-registration</artifactId>	
+	<artifactId>user-registration</artifactId>
+  <version>2.0.16-SNAPSHOT</version>	
 	<packaging>war</packaging>
 
 	<name>User Registration - Webapps</name>
