--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -21,7 +21,7 @@
 	<groupId>com.wso2telco.ids</groupId>
 	<artifactId>component-ids-parent</artifactId>
 	<packaging>pom</packaging>
-	<version>2.0.15-SNAPSHOT</version>
+	<version>2.0.13</version>
 	<name>WSO2Telco Core - Component</name>
 	<description>WSO2Telco Core Aggregate Perent pom</description>
 	<url>http://wso2telco.com</url>
@@ -2191,7 +2191,7 @@
 		<org.apache.sling.commons.json.version>2.0.6</org.apache.sling.commons.json.version>
 		<org.wso2.amber.version>0.22.1358727.wso2v4</org.wso2.amber.version>
 		<!--from intermediate pom -->
-		<com.wso2telco.ids.version>2.0.15-SNAPSHOT</com.wso2telco.ids.version>		
+		<com.wso2telco.ids.version>2.0.13</com.wso2telco.ids.version>		
 
 		<org.wso2.carbon.version>4.4.3</org.wso2.carbon.version>
 		<org.wso2.carbon.identity.version>5.0.7</org.wso2.carbon.identity.version>
