--- a/components/dashboard/pom.xml
+++ b/components/dashboard/pom.xml
@@ -13,7 +13,7 @@
 
   <packaging>pom</packaging>
   <name>dashboard</name>
-  <description>dashbaord jageryapp</description>
+  <description>dashboard jageryapp</description>
   <properties>
     <CApp.type>jaggery/app</CApp.type>
   </properties>
@@ -53,6 +53,6 @@
         </configuration>
       </plugin>
     </plugins>
-   <finalName>dashbaord</finalName>
+   <finalName>dashboard</finalName>
   </build>
 </project>
