--- a/components/operator-proxy-service/src/main/resources/log4j.properties
+++ b/components/operator-proxy-service/src/main/resources/log4j.properties
@@ -1,33 +1,37 @@
-#-------------------------------------------------------------------------------
-# Copyright  (c) 2015-2016, WSO2.Telco Inc. (http://www.wso2telco.com) All Rights Reserved.
-# 
-# WSO2.Telco Inc. licences this file to you under the Apache License, Version 2.0 (the "License");
-# you may not use this file except in compliance with the License.
-# You may obtain a copy of the License at
-# 
-#   http://www.apache.org/licenses/LICENSE-2.0
-# 
-# Unless required by applicable law or agreed to in writing, software
-# distributed under the License is distributed on an "AS IS" BASIS,
-# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-# See the License for the specific language governing permissions and
-# limitations under the License.
-#-------------------------------------------------------------------------------
 # Output pattern : date [thread] priority category - message
-log4j.rootLogger=WARN, Console, RollingFile
+# Output pattern : date [thread] priority category - message
+log4j.rootLogger=DEBUG,INFO, Console, RollingFile,CATALINA
 
 #Console
 log4j.appender.Console=org.apache.log4j.ConsoleAppender
 log4j.appender.Console.layout=org.apache.log4j.PatternLayout
 log4j.appender.Console.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
 
+
+
+# Define all the appenders
+log4j.appender.CATALINA = org.apache.log4j.DailyRollingFileAppender
+log4j.appender.CATALINA.File = ${carbon.home}/repository/logs/${instance.log}/wso2carbon${instance.log}.log
+log4j.appender.CATALINA.Append = true
+log4j.appender.CATALINA.Encoding = UTF-8
+# Roll-over the log once per day
+log4j.appender.CATALINA.DatePattern = '.'yyyy-MM-dd'.log'
+log4j.appender.CATALINA.layout = org.apache.log4j.PatternLayout
+log4j.appender.CATALINA.layout.ConversionPattern = %d [%t] %-5p %c- %m%n
+
+
 #RollingFile
 log4j.appender.RollingFile=org.apache.log4j.DailyRollingFileAppender
-log4j.appender.RollingFile.File=${catalina.home}/logs/locationrest.log
+log4j.appender.RollingFile.File=${carbon.home}/logs/adapter.log
 log4j.appender.RollingFile.layout=org.apache.log4j.PatternLayout
 log4j.appender.RollingFile.layout.ConversionPattern=%d [%t] %-5p [%c] - %m%n
 
 #Project defalult level
-log4j.logger.com.axiata=INFO
+log4j.logger.com.dialog.psi.api=DEBUG
+log4j.logger.com.idea.ussd=DEBUG
+log4j.logger.com.axiata.dialog=DEBUG
+
+
+
 
 
