--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 	<groupId>com.wso2telco.ids</groupId>
 	<artifactId>component-ids</artifactId>
 	<packaging>pom</packaging>
-	<version>2.0.13</version>
+	<version>2.0.14-SNAPSHOT</version>
 	<name>WSO2Telco Core - Component</name>
 	<description>WSO2Telco Core Aggregate Pom</description>
 	<url>http://wso2telco.com</url>
@@ -56,7 +56,7 @@
 		<module>parent</module>
 		<module>components/url-shorten</module>
 		<module>components/user-claim-retriever</module>
-	       <module>components/authenticate-selector</module>
+	    <module>components/authenticate-selector</module>
 		<module>components/gsma-authenticators</module>
 		<module>components/openid-token-builder</module>
 		<module>components/operator-proxy-service</module>
