--- a/components/operator-proxy-service/src/main/webapp/WEB-INF/web.xml
+++ b/components/operator-proxy-service/src/main/webapp/WEB-INF/web.xml
@@ -17,7 +17,7 @@
         <servlet-class>com.sun.jersey.spi.container.servlet.ServletContainer</servlet-class>
         <init-param>
             <param-name>com.sun.jersey.config.property.packages</param-name>
-            <param-value>com.axiata.dialog.proxy.entity</param-value>
+            <param-value>com.wso2telco.proxy.entity</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
