--- a/features/pom.xml
+++ b/features/pom.xml
@@ -20,7 +20,7 @@
 		<module>com.wso2telco.ids.authenticateselector.feature</module>
 		<module>com.wso2telco.ids.authenticationendpoint.ui.feature</module>
 		<module>com.wso2telco.ids.sessionupdater.ui.feature</module>
-		<module>com.wso2telco.ids.operatorproxyservice.ui.feature</module>
+		<module>com.wso2telco.ids.authproxyservice.ui.feature</module>
 		<module>com.wso2telco.ids.dashboard.ui.feature</module>
 		<module>com.wso2telco.ids.portal.ui.feature</module>
 		<module>com.wso2telco.ids.sign.ui.feature</module>
