--- a/features/com.wso2telco.ids.authenticateselector.feature/pom.xml
+++ b/features/com.wso2telco.ids.authenticateselector.feature/pom.xml
@@ -46,9 +46,9 @@
                             </adviceFile>
                             <bundles>
                                 <bundleDef>com.wso2telco.core:mnc-resolver:${com.wso2telco.core.version}</bundleDef>
-                                <bundleDef>org.wso2.carbon.identity:org.wso2.carbon.identity.core:${carbon.identity.version}</bundleDef>
+                                <bundleDef>org.wso2.carbon.identity:org.wso2.carbon.identity.core:${identity.framework.version}</bundleDef>
                                 <bundleDef>org.wso2.carbon:org.wso2.carbon.utils:${carbon.kernel.version}</bundleDef>
-                                <bundleDef>org.wso2.carbon.identity:org.wso2.carbon.identity.application.common:${carbon.identity.version}</bundleDef>
+                                <bundleDef>org.wso2.carbon.identity:org.wso2.carbon.identity.application.common:${identity.framework.version}</bundleDef>
                                 <!--bundleDef>org.wso2.orbit.org.apache.httpcomponents:httpclient:${commons-httpclient.wso2.version}</bundleDef-->
                                 <bundleDef>com.wso2telco.ids:authenticate-selector:${com.wso2telco.ids.version}</bundleDef>
                             </bundles>
