--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,7 @@
 		<module>components/gsma-authenticators</module>
 		<module>components/openid-token-builder</module>
 		<module>components/operator-proxy-service</module>
+		<module>components/auth-proxy-service</module>
 		<module>components/user-registration</module>
 		<module>components/sign</module>
 		<module>components/session-updater</module>
