--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -170,6 +170,11 @@
 				<version>${version.equinox.osgi}</version>
 			</dependency>
 			<dependency>
+				<groupId>org.eclipse.osgi</groupId>
+				<artifactId>org.eclipse.osgi.services</artifactId>
+				<version>${version.equinox.osgi.services}</version>
+			</dependency>
+			<dependency>
 				<groupId>org.wso2.carbon</groupId>
 				<artifactId>javax.cache.wso2</artifactId>
 				<version>${carbon.kernel.version}</version>
