--- a/components/auth-proxy-service/pom.xml
+++ b/components/auth-proxy-service/pom.xml
@@ -66,6 +66,12 @@
         <artifactId>org.wso2.carbon.utils</artifactId>
         <scope>provided</scope>
     </dependency>
+    <dependency>
+        <groupId>com.wso2telco.ids</groupId>
+        <artifactId>opeid-extension</artifactId>
+        <version>2.0.13</version>
+        <scope>provided</scope>
+    </dependency>
 </dependencies>
 
 <build>
