--- a/components/gsma-authenticators/pom.xml
+++ b/components/gsma-authenticators/pom.xml
@@ -37,6 +37,10 @@
 			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.identity.application.common</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.identity</groupId>
+            <artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>org.apache.felix</groupId>
 			<artifactId>org.apache.felix.scr.annotations</artifactId>
@@ -49,6 +53,10 @@
 			<groupId>com.wso2telco.core</groupId>
 			<artifactId>mnc-resolver</artifactId>
 		</dependency>
+        <dependency>
+            <groupId>com.wso2telco.core</groupId>
+            <artifactId>config-util</artifactId>
+        </dependency>
 		<dependency>
 			<groupId>com.wso2telco.ids</groupId>
 			<artifactId>url-shorten</artifactId>
@@ -63,6 +71,10 @@
 			<artifactId>commons-codec</artifactId>
 		</dependency>
 
+        <dependency>
+            <groupId>com.wso2telco.ids</groupId>
+            <artifactId>openid-token-builder</artifactId>
+        </dependency>
 
 	</dependencies>
 	<build>
