--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -804,7 +804,11 @@
 				<artifactId>mnc-resolver</artifactId>
 				<version>${com.wso2telco.core.version}</version>
 			</dependency>
-
+            <dependency>
+                <groupId>com.wso2telco.core</groupId>
+                <artifactId>config-util</artifactId>
+                <version>2.0.4-SNAPSHOT</version>
+            </dependency>
 			<dependency>
 				<groupId>com.wso2telco.core</groupId>
 				<artifactId>dbutils</artifactId>
@@ -1353,6 +1357,11 @@
             </dependency>
             <dependency>
                 <groupId>org.wso2.carbon.identity</groupId>
+                <artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
+                <version>${identity.framework.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.wso2.carbon.identity</groupId>
                 <artifactId>org.wso2.carbon.identity.core</artifactId>
                 <version>${identity.framework.version}</version>
             </dependency>
@@ -1375,6 +1384,11 @@
             </dependency>
 
 
+            <dependency>
+                <groupId>com.wso2telco.ids</groupId>
+                <artifactId>openid-token-builder</artifactId>
+                <version>${com.wso2telco.ids.version}</version>
+            </dependency>
 
 		</dependencies>
 	</dependencyManagement>
@@ -1634,7 +1648,7 @@
 		<org.json.wso2.version>3.0.0.wso2v1</org.json.wso2.version>
 		
 		<org.apache.felix.scr.annotations.version>1.9.6</org.apache.felix.scr.annotations.version>		
-		<com.wso2telco.core.version>2.0.02</com.wso2telco.core.version>	
+		<com.wso2telco.core.version>2.0.02</com.wso2telco.core.version>
 	</properties>
 
 	<build>
