Fixing typo in auth-proxy-service pom

--- a/components/auth-proxy-service/pom.xml
+++ b/components/auth-proxy-service/pom.xml
@@ -68,7 +68,7 @@
     </dependency>
     <dependency>
         <groupId>com.wso2telco.ids</groupId>
-        <artifactId>opeid-extension</artifactId>
+        <artifactId>openid-extension</artifactId>
         <version>2.0.13</version>
         <scope>provided</scope>
     </dependency>
