Configuring webapp class-loading

--- a/components/authentication-endpoint/pom.xml
+++ b/components/authentication-endpoint/pom.xml
@@ -40,6 +40,7 @@
 		<dependency>
 			<groupId>commons-logging</groupId>
 			<artifactId>commons-logging</artifactId>
+            <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.slf4j</groupId>
@@ -48,14 +49,17 @@
 		<dependency>
 			<groupId>javax.servlet</groupId>
 			<artifactId>jstl</artifactId>
+            <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-codec.wso2</groupId>
 			<artifactId>commons-codec</artifactId>
+            <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>commons-lang.wso2</groupId>
 			<artifactId>commons-lang</artifactId>
+            <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>javax.servlet</groupId>
@@ -67,6 +71,7 @@
 			<groupId>org.apache.ws.commons.axiom</groupId>
 			<artifactId>axiom-api</artifactId>
 			<version>1.2.11-wso2v10</version>
+            <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.wso2.carbon.identity</groupId>
@@ -81,6 +86,7 @@
 		<dependency>
 			<groupId>org.wso2.securevault</groupId>
 			<artifactId>org.wso2.securevault</artifactId>
+            <scope>provided</scope>
 			<exclusions>
 				<exclusion>
 					<groupId>commons-lang</groupId>
@@ -91,6 +97,7 @@
 		<dependency>
 			<groupId>org.wso2.orbit.org.owasp.encoder</groupId>
 			<artifactId>encoder</artifactId>
+            <scope>provided</scope>
 		</dependency>
 		<!--<dependency>
 			<groupId>org.wso2.carbon.identity</groupId>
