--- a/components/user-registration/pom.xml
+++ b/components/user-registration/pom.xml
@@ -52,6 +52,7 @@
 		<dependency>
 				<groupId>org.json.wso2</groupId>
 				<artifactId>json</artifactId>
+                <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>com.atlassian.httpclient</groupId>
@@ -94,6 +95,7 @@
 		<dependency>
 			<groupId>org.wso2.carbon.identity</groupId>
 			<artifactId>org.wso2.carbon.identity.user.registration.stub</artifactId>
+            <scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.apache.axis2.wso2</groupId>
@@ -141,6 +143,7 @@
 		<dependency>
 			<groupId>com.ibm.icu</groupId>
 			<artifactId>icu4j</artifactId>
+            <scope>provided</scope>
 		</dependency>
 
 		
@@ -152,22 +155,26 @@
 		<dependency>
 			<groupId>com.sun.jersey</groupId>
 			<artifactId>jersey-client</artifactId>
+            <scope>provided</scope>
 		</dependency>
 
         <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-server</artifactId>
             <version>1.17.1</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-core</artifactId>
             <version>1.17.1</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.sun.jersey</groupId>
             <artifactId>jersey-servlet</artifactId>
             <version>1.17.1</version>
+            <scope>provided</scope>
         </dependency>
 		<dependency>
 			<groupId>com.wso2telco.ids</groupId>
