--- a/components/auth-proxy-service/pom.xml
+++ b/components/auth-proxy-service/pom.xml
@@ -29,6 +29,7 @@
     <dependency>
         <groupId>org.apache.httpcomponents</groupId>
         <artifactId>httpclient</artifactId>
+        <scope>provided</scope>
     </dependency>
     <dependency>
         <groupId>javax.servlet</groupId>
