--- a/components/authentication-endpoint/src/main/webapp/WEB-INF/web.xml
+++ b/components/authentication-endpoint/src/main/webapp/WEB-INF/web.xml
@@ -106,6 +106,11 @@
     </servlet>
 
     <servlet>
+        <servlet-name>auth_consent</servlet-name>
+        <jsp-file>/mcx-user-registration/register.jsp</jsp-file>
+    </servlet>
+
+    <servlet>
         <servlet-name>oauth2_logout_consent.do</servlet-name>
         <jsp-file>/oauth2_logout_consent.jsp</jsp-file>
     </servlet>
@@ -168,6 +173,11 @@
     <servlet-mapping>
         <servlet-name>retry.do</servlet-name>
         <url-pattern>/retry.do</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>auth_consent</servlet-name>
+        <url-pattern>/mcx-user-registration/auth_consent</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
