--- a/components/gsma-authenticators/pom.xml
+++ b/components/gsma-authenticators/pom.xml
@@ -92,7 +92,12 @@
             <groupId>commons-logging</groupId>
             <artifactId>commons-logging</artifactId>
         </dependency>
-
+	<dependency>
+		<groupId>org.wso2.carbon.identity</groupId>
+		<artifactId>org.wso2.carbon.um.ws.api.stub</artifactId>
+		<type>jar</type>
+		<scope>provided</scope>
+	</dependency>
 
     </dependencies>
 	<build>
