1. Moved user registration endpoints to session updater 2. Fixed the login flow

--- a/components/session-updater/src/main/resources/application.properties
+++ b/components/session-updater/src/main/resources/application.properties
@@ -1,12 +1,11 @@
-#-------------------------------------------------------------------------------
-# Copyright (c) 2015-2016, WSO2.Telco Inc. (http://www.wso2telco.com) 
-# 
+opyright (c) 2015-2016, WSO2.Telco Inc. (http://www.wso2telco.com)
+#
 # All Rights Reserved. WSO2.Telco Inc. licences this file to you under the Apache License, Version 2.0 (the "License");
 # you may not use this file except in compliance with the License.
 # You may obtain a copy of the License at
-# 
+#
 #   http://www.apache.org/licenses/LICENSE-2.0
-# 
+#
 # Unless required by applicable law or agreed to in writing, software
 # distributed under the License is distributed on an "AS IS" BASIS,
 # WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
@@ -19,9 +18,9 @@ startSubscriptionResourceURL=http://localhost:8080/sms/outbound/subscriptions/
 smpp_port_1=2645
 smpp_port_list=2645;7781;7756;8867
 #ussd API url
-ussdsend=https://apimanager.example.com:8243/ussd/v1/outbound
+ussdsend=http://localhost:9763/ussdstub/v1/outbound
 #Session updater call back URL
-notifyurl=https://localhost:9763/sessionupdater/tnspoints/endpoint/ussd/pin
+notifyurl=http://localhost:9763/sessionupdater/tnspoints/endpoint/ussd/pin
 #authorization token to access the ussd api
 accesstoken=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 shortcode=tel:1721
@@ -34,10 +33,9 @@ error_message=You have entered invalid pin 3 times.Your session is over
 #ussd key word
 keyword=3456
 #https://identity.example.com/
-admin_url="Identity server URL"
+admin_url=https://localhost:9443
 aeskey=wso2encryptdecyt
 #Identity Server carbon console username
 adminusername=admin
 #Identity Server carbon console username
-adminpassword=password
-
+adminpassword=admin
