--- a/components/authentication-endpoint/src/main/webapp/WEB-INF/web.xml
+++ b/components/authentication-endpoint/src/main/webapp/WEB-INF/web.xml
@@ -111,6 +111,11 @@
     </servlet>
 
     <servlet>
+        <servlet-name>auth_registration</servlet-name>
+        <jsp-file>/mcx-user-registration/waiting.jsp</jsp-file>
+    </servlet>
+
+    <servlet>
         <servlet-name>oauth2_logout_consent.do</servlet-name>
         <jsp-file>/oauth2_logout_consent.jsp</jsp-file>
     </servlet>
@@ -178,6 +183,11 @@
     <servlet-mapping>
         <servlet-name>auth_consent</servlet-name>
         <url-pattern>/mcx-user-registration/auth_consent</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>auth_registration</servlet-name>
+        <url-pattern>/mcx-user-registration/auth_registration</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
