Fixed user saving error

--- a/components/gsma-authenticators/pom.xml
+++ b/components/gsma-authenticators/pom.xml
@@ -97,6 +97,12 @@
 			<artifactId>org.wso2.carbon.identity.application.authentication.endpoint.util</artifactId>
 			<scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.wso2.carbon.identity</groupId>
+			<artifactId>org.wso2.carbon.um.ws.api.stub</artifactId>
+			<type>jar</type>
+			<scope>provided</scope>
+		</dependency>
 
 
     </dependencies>
