--- a/components/session-updater/pom.xml
+++ b/components/session-updater/pom.xml
@@ -81,6 +81,21 @@
 			<artifactId>gson</artifactId>
             <scope>provided</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.wso2.carbon</groupId>
+			<artifactId>org.wso2.carbon.utils</artifactId>
+			<scope>provided</scope>
+		</dependency>
+        <dependency>
+            <groupId>org.wso2.carbon.identity</groupId>
+            <artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
+			<scope>provided</scope>
+        </dependency>
+		<dependency>
+			<groupId>com.wso2telco.core</groupId>
+			<artifactId>config-util</artifactId>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<!--finalName>SessionUpdater</finalName-->
