--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -812,7 +812,7 @@
             <dependency>
                 <groupId>com.wso2telco.core</groupId>
                 <artifactId>config-util</artifactId>
-                <version>2.0.4-SNAPSHOT</version>
+                <version>${com.wso2telco.core.version}</version>
             </dependency>
 			<dependency>
 				<groupId>com.wso2telco.core</groupId>
