--- a/parent/pom.xml
+++ b/parent/pom.xml
@@ -812,7 +812,7 @@
             <dependency>
                 <groupId>com.wso2telco.core</groupId>
                 <artifactId>config-util</artifactId>
-                <version>2.0.4-SNAPSHOT</version>
+                <version>${com.wso2telco.core.version}</version>
             </dependency>
 			<dependency>
 				<groupId>com.wso2telco.core</groupId>
@@ -1358,11 +1358,6 @@
             <dependency>
                 <groupId>org.wso2.carbon.identity</groupId>
                 <artifactId>org.wso2.carbon.identity.application.common</artifactId>
-                <version>${identity.framework.version}</version>
-            </dependency>
-            <dependency>
-                <groupId>org.wso2.carbon.identity</groupId>
-                <artifactId>org.wso2.carbon.identity.application.authentication.framework</artifactId>
                 <version>${identity.framework.version}</version>
             </dependency>
             <dependency>
