--- a/components/gsma-authenticators/pom.xml
+++ b/components/gsma-authenticators/pom.xml
@@ -110,6 +110,16 @@
 			<type>jar</type>
 			<scope>provided</scope>
 		</dependency>
+        <dependency>
+            <groupId>com.wso2telco.core</groupId>
+            <artifactId>sp-config-util</artifactId>
+            <version>2.0.4-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.wso2telco.ids</groupId>
+            <artifactId>ids-data-publisher</artifactId>
+            <version>2.0.13</version>
+        </dependency>
     </dependencies>
 	<build>
 		<plugins>
