--- a/components/saa-server/pom.xml
+++ b/components/saa-server/pom.xml
@@ -57,6 +57,16 @@
             <artifactId>httpclient</artifactId>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>com.wso2telco.core</groupId>
+            <artifactId>config-util</artifactId>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <groupId>com.wso2telco.core</groupId>
+            <artifactId>dbutils</artifactId>
+            <scope>provided</scope>
+        </dependency>
     </dependencies>
     <repositories>
         <repository>
