Moved pin authenticator registration UI

--- a/components/authentication-endpoint/src/main/webapp/WEB-INF/web.xml
+++ b/components/authentication-endpoint/src/main/webapp/WEB-INF/web.xml
@@ -121,6 +121,11 @@
     </servlet>
 
     <servlet>
+        <servlet-name>auth_pin_registration</servlet-name>
+        <jsp-file>/mcx-user-registration/pin_register.jsp</jsp-file>
+    </servlet>
+
+    <servlet>
         <servlet-name>auth_registration_profile_upgrade</servlet-name>
         <jsp-file>/mcx-user-registration/profile_upgrade.jsp</jsp-file>
     </servlet>
@@ -243,6 +248,11 @@
     <servlet-mapping>
         <servlet-name>auth_registration_pin</servlet-name>
         <url-pattern>/mcx-user-registration/auth_registration_pin</url-pattern>
+    </servlet-mapping>
+
+    <servlet-mapping>
+        <servlet-name>auth_pin_registration</servlet-name>
+        <url-pattern>/mcx-user-registration/auth_pin_registration</url-pattern>
     </servlet-mapping>
 
     <servlet-mapping>
