--- a/pom.xml
+++ b/pom.xml
@@ -66,6 +66,7 @@
 		<module>components/portal</module>
 		<module>components/dashboard</module>
 		<module>components/authentication-endpoint</module>
+        <module>components/saa-server</module>
 		<module>features</module>
         <module>components/openid-extension</module>
     </modules>
